--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -192,7 +192,7 @@
     "    SiteID_str = str(row['SiteID'])\n",
     "\n",
     "    target_time = row['UTC_Datetime'].round('1h').strftime('%Y-%m-%d %H:%M:%S')\n",
-    "    eratos_value = eratos_rh_df.loc[eratos_rh_df['Date_time'] == target_time, SiteID_str].values[0]\n",
+    "    eratos_value = eratos_df.loc[eratos_df['Date_time'] == target_time, SiteID_str].values[0]\n",
     "    print(SiteID_str, target_time)\n",
     "    print(eratos_value)\n",
     "\n",
