Went back to use working_dir variable

--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "working_dir = '../..'  # This repository's root directory\n",
     "pcs_folder_path = (\n",
     "    'Data/pcs'  # Some observations were recorded twice. One with and one without gps data\n",
     ")\n",
@@ -43,7 +44,7 @@
     "from geopy.point import Point\n",
     "from sklearn.cluster import DBSCAN\n",
     "\n",
-    "sys.path.append('../..')\n",
+    "sys.path.append(working_dir)\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
@@ -103,19 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "glob.glob(os.path.join('..', '..', pcs_folder_path, 'fts*.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "locations_dates_df_list = []\n",
     "df_list = []\n",
-    "for i, file_name in enumerate(glob.glob(os.path.join('..', '..', pcs_folder_path, 'fts*.csv'))):\n",
+    "for i, file_name in enumerate(glob.glob(os.path.join(working_dir, pcs_folder_path, 'fts*.csv'))):\n",
     "    df = pd.read_csv(file_name)\n",
     "    print(f\"Station names: {df['Station name'].unique()}\")\n",
     "    station_name = df['Station name'][0]\n",
@@ -146,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Prepare pcs.csv"
@@ -181,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,21 +228,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the df_all\n",
     "\n",
     "df_all = df_all[['SiteID', 'X', 'Y', 'Datetime', 'Temperature', 'RH', 'VPD', 'DFMC', 'Soil_mois']]\n",
-    "df_all.to_csv(os.path.join('..', '..', output_file_path), index=False)\n",
+    "df_all.to_csv(os.path.join(working_dir, output_file_path), index=False)\n",
     "df_all"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
