--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -35,6 +35,7 @@
    },
    "outputs": [],
    "source": [
+    "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_phd.csv'\n",
     "output_file_name = 'barra2_vpd_phd.csv'\n",
     "\n",
@@ -48,12 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append('../..')\n",
+    "sys.path.append(working_dir)\n",
     "from Utils.barra2 import *\n",
     "from Utils.datetime import add_UTC_Datetime\n",
-    "from Utils.vpd import calculate_vpd"
+    "from Utils.vpd import calculate_vpd\n",
+    "\n",
+    "barra2_data_dir = os.path.join(working_dir, 'Data', 'barra2')"
    ]
   },
   {
@@ -143,7 +147,9 @@
     "\n",
     "if download_barra2_data:\n",
     "    vars = ['tas', 'hurs']\n",
-    "    download_all_barra2_data(vars, barra2_cell_locations_list, first_datetime, last_datetime)"
+    "    download_all_barra2_data(\n",
+    "        vars, barra2_cell_locations_list, first_datetime, last_datetime, barra2_data_dir\n",
+    "    )"
    ]
   },
   {
@@ -244,8 +250,10 @@
    "source": [
     "# For each row, open barra2 data csv file one-by-one to get data (40 min)\n",
     "\n",
-    "df['barra2_Temperature'] = df.apply(lambda row: get_barra2_value(row, 'tas'), axis=1)\n",
-    "df['barra2_RH'] = df.apply(lambda row: get_barra2_value(row, 'hurs'), axis=1)\n",
+    "df['barra2_Temperature'] = df.apply(\n",
+    "    lambda row: get_barra2_value(row, 'tas', barra2_data_dir), axis=1\n",
+    ")\n",
+    "df['barra2_RH'] = df.apply(lambda row: get_barra2_value(row, 'hurs', barra2_data_dir), axis=1)\n",
     "df.head()"
    ]
   },
