--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -45,6 +45,7 @@
    },
    "outputs": [],
    "source": [
+    "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_phd.csv'\n",
     "output_file_name = 'eratos_vpd_phd.csv'\n",
     "\n",
@@ -67,7 +68,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('../..')\n",
+    "sys.path.append(working_dir)\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
