--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -36,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_phd.csv'\n",
     "max_temp_output_file_name = 'silo_max_temp_vpd_phd.csv'\n",
     "min_temp_output_file_name = 'silo_min_temp_vpd_phd.csv'\n",
@@ -57,7 +58,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('../..')\n",
+    "sys.path.append(working_dir)\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
