--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -42,6 +42,7 @@
    "outputs": [],
    "source": [
     "# Set variables\n",
+    "working_dir = '../..'  # This repository's root directory\n",
     "data_file_name = \"T_RH_2020-11-10(in).csv\"\n",
     "data_url = \"https://anu365.sharepoint.com/:x:/r/sites/ANU-OptusBushfireResearchCoE/Shared%20Documents/Projects/2024_5%20NSSN%20FMC%20monitoring/T_RH_2020-11-10.csv?d=w7e97fe709fc24f839be6d929d48bde0e&csf=1&web=1&e=3XhSoD\""
    ]
@@ -60,7 +61,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('../..')\n",
+    "sys.path.append(working_dir)\n",
     "from Utils.barra2 import *\n",
     "from Utils.vpd import calculate_vpd"
    ]
@@ -77,7 +78,7 @@
     "\n",
     "import os\n",
     "\n",
-    "output_dir = os.path.join('..', '..', 'output', 'csv')\n",
+    "output_dir = os.path.join(working_dir, 'output', 'csv')\n",
     "os.makedirs(output_dir, exist_ok=True)"
    ]
   },
@@ -109,7 +110,7 @@
     "        print(f\"Error downloading data: {e}\")\n",
     "\n",
     "\n",
-    "data_path = os.path.join('..', '..', 'Data', 'phd', data_file_name)\n",
+    "data_path = os.path.join(working_dir, 'Data', 'phd', data_file_name)\n",
     "if not os.path.exists(data_path):\n",
     "    download_file(data_url, data_path)"
    ]
@@ -412,7 +413,7 @@
    "outputs": [],
    "source": [
     "# Save to CSV\n",
-    "sites_df.to_csv(os.path.join('..', '..', 'Data', 'phd', 'site_data_summary_phd.csv'), index=False)"
+    "sites_df.to_csv(os.path.join(working_dir, 'Data', 'phd', 'site_data_summary_phd.csv'), index=False)"
    ]
   },
   {
@@ -486,7 +487,7 @@
     "def add_data_to_df(property, df):\n",
     "    # TODO (LOW): There is no more need to merge all tif files.\n",
     "    # Find all related tif files\n",
-    "    files = glob.glob(os.path.join('..', '..', 'output', f'*{property}.tif'))\n",
+    "    files = glob.glob(os.path.join(working_dir, 'output', f'*{property}.tif'))\n",
     "    print(f\"There are {len(files)} {property} files: {files}\")\n",
     "\n",
     "    # Merge all tif files\n",
@@ -624,7 +625,7 @@
     "\n",
     "import xarray as xr\n",
     "\n",
-    "veg_cover_data_path = os.path.join('..', '..', \"Data\", \"Vegetation_cover\", \"veg_cover_phd.nc\")\n",
+    "veg_cover_data_path = os.path.join(working_dir, \"Data\", \"Vegetation_cover\", \"veg_cover_phd.nc\")\n",
     "veg_ds = xr.open_dataset(veg_cover_data_path)\n",
     "print(\n",
     "    \"The actual crs of the veg_ds is EPSG:32754. The attribute was incorrectly saved when downloading the data.\"\n",
@@ -883,7 +884,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "dem_path = os.path.join('..', '..', \"output\", \"batemans_bay_dem_no_neg.tif\")\n",
+    "dem_path = os.path.join(working_dir, \"output\", \"batemans_bay_dem_no_neg.tif\")\n",
     "with rasterio.open(dem_path) as src:\n",
     "    dem_data = src.read(1)\n",
     "\n",
@@ -917,7 +918,7 @@
    "outputs": [],
    "source": [
     "url = \"https://data.dea.ga.gov.au/derivative/ga_ls_fc_3/2-5-1/090/084/2015/01/02/ga_ls_fc_3_090084_2015-01-02_final_veg_cover.tif\"\n",
-    "download_file(url, os.path.join('..', '..', \"data\", \"test.tif\"))"
+    "download_file(url, os.path.join(working_dir, \"data\", \"test.tif\"))"
    ]
   },
   {
@@ -968,7 +969,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "relief_path = os.path.join('..', '..', \"output\", \"batemans_bay_relief.tif\")\n",
+    "relief_path = os.path.join(working_dir, \"output\", \"batemans_bay_relief.tif\")\n",
     "with rasterio.open(relief_path) as src:\n",
     "    relief_data = src.read(1)\n",
     "\n",
