--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -21,7 +21,7 @@
     "pcs_folder_path = (\n",
     "    'Data/pcs'  # Some observations were recorded twice. One with and one without gps data\n",
     ")\n",
-    "output_file_path = 'Data/pcs/pcs.csv'\n",
+    "output_dir_path = 'Data/pcs'\n",
     "\n",
     "plot_latlon_graph = False"
    ]
@@ -158,7 +158,8 @@
     "\n",
     "sites_info_df['start_date_UTC'] = sites_info_df['start_date_UTC'].dt.date\n",
     "sites_info_df['end_date_UTC'] = sites_info_df['end_date_UTC'].dt.date\n",
-    "sites_info_df.drop(['cluster'], axis=1).to_csv(\"sites_latlon_dates.csv\", index=False)"
+    "sites_info_df_path = os.path.join(working_dir, output_dir_path, 'sites_latlon_dates.csv')\n",
+    "sites_info_df.drop(['cluster'], axis=1).to_csv(sites_info_df_path, index=False)"
    ]
   },
   {
@@ -235,7 +236,7 @@
     "# Save the df_all\n",
     "\n",
     "df_all = df_all[['SiteID', 'X', 'Y', 'Datetime', 'Temperature', 'RH', 'VPD', 'DFMC', 'Soil_mois']]\n",
-    "df_all.to_csv(os.path.join(working_dir, output_file_path), index=False)\n",
+    "df_all.to_csv(os.path.join(working_dir, output_dir_path, 'pcs.csv'), index=False)\n",
     "df_all"
    ]
   },
