--- a/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
+++ b/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
@@ -31,11 +31,11 @@
    },
    "outputs": [],
    "source": [
-    "working_dir = \"/content/drive/My Drive/Work/2025.04 ANU Bushfire\"\n",
-    "dem_tif_file_name = \"dem_vic_nsw_act.tif\"\n",
+    "working_dir = \"../..\"\n",
+    "dem_tif_file_path = \"Data/aus_dem/dem_vic_nsw_act.tif\"\n",
     "data_exploration = False\n",
     "\n",
-    "australia_shp_folder_name = \"STE_2021_AUST_SHP_GDA2020\"\n",
+    "australia_shp_folder_path = \"Utils/STE_2021_AUST_SHP_GDA2020\"\n",
     "\n",
     "# Set interest areas data. Use large bbox to leave room for relief calculation\n",
     "# Note: GDAL uses upper-left and lower-right corner\n",
@@ -47,26 +47,47 @@
     "# location_name = \"port_macquarie\"\n",
     "# bbox = [152.4, -31.2, 152.7, -31.7]\n",
     "\n",
-    "location_name = \"batemans_bay\"\n",
-    "# bbox = [150.0, -35.4, 150.3, -35.7]  # Small scope\n",
-    "bbox = [149.8, -35.2, 150.5, -36.3]  # Large scope"
+    "# location_name = \"batemans_bay\"\n",
+    "# # bbox = [150.0, -35.4, 150.3, -35.7]  # Small scope\n",
+    "# bbox = [149.8, -35.2, 150.5, -36.3]  # Large scope (include phd sites)\n",
+    "\n",
+    "location_name = \"pcs\"\n",
+    "bbox = [148.8, -35.0, 149.4, -35.8]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ZQ5yAMNc9ZWz",
-    "outputId": "7426b4ee-26ad-4e5b-9810-1f0b4db2971b"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
+    "import glob\n",
+    "import os\n",
+    "import pprint\n",
+    "import sys\n",
     "\n",
-    "drive.mount('/content/drive')"
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "from matplotlib import pyplot as plt\n",
+    "from osgeo import gdal\n",
+    "from rasterio.plot import show\n",
+    "from shapely.geometry import box\n",
+    "\n",
+    "sys.path.append(working_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a folder for storing outputs\n",
+    "output_dir = os.path.join(working_dir, \"output\")\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "os.makedirs(os.path.join(output_dir, \"geojson\"), exist_ok=True)\n",
+    "os.makedirs(os.path.join(output_dir, \"tif\"), exist_ok=True)"
    ]
   },
   {
@@ -94,46 +115,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "fw79H0Hs-1Ig",
-    "outputId": "b3c67548-4e70-4245-b015-a0b66c4439b6"
-   },
-   "outputs": [],
-   "source": [
-    "# Get dem_tif_file_path\n",
-    "\n",
-    "import glob\n",
-    "import os\n",
-    "\n",
-    "if dem_tif_file_name == \"\":\n",
-    "    dem_tif_file_path = glob.glob(os.path.join(working_dir, \"*.tif\"))[0]\n",
-    "else:\n",
-    "    dem_tif_file_path = os.path.join(working_dir, dem_tif_file_name)\n",
-    "\n",
-    "print(f\"dem_tif_file_path: {dem_tif_file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "w6eaOU-XLqWV",
-    "outputId": "c016c92b-d10b-4938-ceb6-40aea67dba00"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install rasterio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "9FCGVBkNLiZH",
     "outputId": "f5f50c70-2cd3-4450-a767-e3cea1e3e979"
    },
@@ -141,12 +122,7 @@
    "source": [
     "# Read the metadata and the data\n",
     "\n",
-    "import pprint\n",
-    "\n",
-    "import rasterio\n",
-    "from rasterio.plot import show\n",
-    "\n",
-    "with rasterio.open(dem_tif_file_path) as src:\n",
+    "with rasterio.open(os.path.join(working_dir, dem_tif_file_path)) as src:\n",
     "    print(\"Full metadata:\")\n",
     "    pprint.pp(src.profile)\n",
     "\n",
@@ -166,8 +142,6 @@
    "outputs": [],
    "source": [
     "# Exploring the data\n",
-    "\n",
-    "import numpy as np\n",
     "\n",
     "if data_exploration:\n",
     "    print(f\"Unique values: {np.unique(data[:10000, :10000])}\")\n",
@@ -192,9 +166,6 @@
    },
    "outputs": [],
    "source": [
-    "from shapely.geometry import box\n",
-    "\n",
-    "\n",
     "def create_cutline_file(bbox, aus):\n",
     "    bbox_poly = box(\n",
     "        bbox[0], bbox[3], bbox[2], bbox[1]\n",
@@ -245,24 +216,16 @@
    },
    "outputs": [],
    "source": [
-    "# Get .tif of only interest areas (Start with the lCoffs Harbour area)\n",
-    "\n",
-    "\n",
-    "import geopandas as gpd\n",
-    "from osgeo import gdal\n",
-    "\n",
-    "# Create a folder for storing .tif outputs\n",
-    "output_dir = os.path.join(working_dir, \"output\")\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
+    "# Get .tif of only interest areas\n",
     "\n",
     "# Read shapefile of Australia\n",
-    "australia_shp_folder_path = os.path.join(working_dir, australia_shp_folder_name)\n",
+    "australia_shp_folder_path = os.path.join(working_dir, australia_shp_folder_path)\n",
     "australia_shp_file_path = glob.glob(os.path.join(australia_shp_folder_path, \"*.shp\"))[0]\n",
     "aus = gpd.read_file(australia_shp_file_path)\n",
     "\n",
     "# Get cropped .tif dem file\n",
     "cutline_gdf, cutline_path = create_cutline_file(bbox, aus)\n",
-    "cropped_dem_tif_path = os.path.join(output_dir, location_name + \"_dem.tif\")\n",
+    "cropped_dem_tif_path = os.path.join(output_dir, 'tif', location_name + \"_dem.tif\")\n",
     "create_cropped_dem_tif(cropped_dem_tif_path, cutline_path)"
    ]
   },
@@ -278,11 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "import pprint\n",
-    "\n",
     "# Explore the cropped .tif dem file\n",
-    "import rasterio\n",
-    "from rasterio.plot import show\n",
     "\n",
     "with rasterio.open(cropped_dem_tif_path) as src:\n",
     "    print(\"Full metadata:\")\n",
@@ -314,19 +273,17 @@
    "source": [
     "# Remove negative values with zeroes\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
     "data[data == -9999.0] = np.nan\n",
     "data[data < 0.0] = 0.0\n",
     "\n",
-    "no_neg_cropped_dem_tif_path = os.path.join(output_dir, location_name + \"_dem_no_neg.tif\")\n",
-    "with rasterio.open(no_neg_cropped_dem_tif_path, 'w', **profile) as dst:\n",
+    "no_neg_cropped_dem_tif_path = os.path.join(output_dir, 'tif', location_name + \"_dem_no_neg.tif\")\n",
+    "with rasterio.open(no_neg_cropped_dem_tif_path, \"w\", **profile) as dst:\n",
     "    dst.write(data, 1)\n",
     "    print(f\"No negative cropped DEM saved to: {no_neg_cropped_dem_tif_path}\")\n",
     "\n",
-    "    plt.imshow(data, cmap='terrain')\n",
-    "    plt.colorbar(label='DEM (metres)')\n",
-    "    plt.title('Digital Elevation Model')\n",
+    "    plt.imshow(data, cmap=\"terrain\")\n",
+    "    plt.colorbar(label=\"DEM (metres)\")\n",
+    "    plt.title(\"Digital Elevation Model\")\n",
     "    plt.show()"
    ]
   },
@@ -363,21 +320,17 @@
    "source": [
     "# Computing and visualise slope from . tif DEM data\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import rasterio\n",
-    "from osgeo import gdal\n",
-    "\n",
-    "slope_path = os.path.join(output_dir, location_name + \"_slope.tif\")\n",
+    "slope_path = os.path.join(output_dir, 'tif', location_name + \"_slope.tif\")\n",
     "print(f\"Slope saved to: {slope_path}\")\n",
     "\n",
     "# Compute slope\n",
     "gdal.DEMProcessing(\n",
     "    slope_path,  # Output file path\n",
     "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
-    "    'slope',  # Processing type\n",
-    "    format='GTiff',  # Output format\n",
+    "    \"slope\",  # Processing type\n",
+    "    format=\"GTiff\",  # Output format\n",
     "    computeEdges=True,  # Avoid edge artifacts\n",
-    "    slopeFormat='degree',  # Options: 'degree' or 'percent'\n",
+    "    slopeFormat=\"degree\",  # Options: 'degree' or 'percent'\n",
     ")\n",
     "\n",
     "print(\"Slope calculation complete.\")\n",
@@ -386,9 +339,9 @@
     "with rasterio.open(slope_path) as src:\n",
     "    slope_data = src.read(1)\n",
     "\n",
-    "plt.imshow(slope_data, cmap='terrain')\n",
-    "plt.colorbar(label='Slope (degrees)')\n",
-    "plt.title('Slope Map')\n",
+    "plt.imshow(slope_data, cmap=\"terrain\")\n",
+    "plt.colorbar(label=\"Slope (degrees)\")\n",
+    "plt.title(\"Slope Map\")\n",
     "plt.show()"
    ]
   },
@@ -416,15 +369,15 @@
    "source": [
     "# Computing and visualise aspect from . tif DEM data\n",
     "\n",
-    "aspect_path = os.path.join(output_dir, location_name + \"_aspect.tif\")\n",
+    "aspect_path = os.path.join(output_dir, 'tif', location_name + \"_aspect.tif\")\n",
     "print(f\"Aspect saved to: {aspect_path}\")\n",
     "\n",
     "# Compute aspect\n",
     "gdal.DEMProcessing(\n",
     "    aspect_path,  # Output file path\n",
     "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
-    "    'aspect',  # Processing type\n",
-    "    format='GTiff',  # Output format\n",
+    "    \"aspect\",  # Processing type\n",
+    "    format=\"GTiff\",  # Output format\n",
     "    computeEdges=True,  # Avoid edge artifacts\n",
     ")\n",
     "\n",
@@ -435,9 +388,9 @@
     "    aspect_data = src.read(1)\n",
     "\n",
     "aspect_data[aspect_data == -9999] = np.nan\n",
-    "plt.imshow(aspect_data, cmap='terrain')\n",
-    "plt.colorbar(label='Aspect (degrees)')\n",
-    "plt.title('Aspect Map')\n",
+    "plt.imshow(aspect_data, cmap=\"terrain\")\n",
+    "plt.colorbar(label=\"Aspect (degrees)\")\n",
+    "plt.title(\"Aspect Map\")\n",
     "plt.show()"
    ]
   },
@@ -517,267 +470,15 @@
    "source": [
     "# Visualise relief calculated\n",
     "\n",
-    "relief_path = os.path.join(output_dir, location_name + \"_relief.tif\")\n",
-    "with rasterio.open(relief_path, 'w', **profile) as dst:\n",
+    "relief_path = os.path.join(output_dir, 'tif', location_name + \"_relief.tif\")\n",
+    "with rasterio.open(relief_path, \"w\", **profile) as dst:\n",
     "    dst.write(relief_data, 1)\n",
     "    print(f\"Relief saved to: {relief_path}\")\n",
     "\n",
-    "plt.imshow(relief_data, cmap='terrain')\n",
-    "plt.colorbar(label='Relief (metres)')\n",
-    "plt.title('Relief Map')\n",
+    "plt.imshow(relief_data, cmap=\"terrain\")\n",
+    "plt.colorbar(label=\"Relief (metres)\")\n",
+    "plt.title(\"Relief Map\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "QTsW3OGPVHWQ"
-   },
-   "outputs": [],
-   "source": [
-    "# Notify when finish running\n",
-    "from google.colab import output\n",
-    "\n",
-    "output.eval_js(\n",
-    "    'new Audio(\"https://upload.wikimedia.org/wikipedia/commons/0/05/Beep-09.ogg\").play()'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "GNIQMQcZj-WI"
-   },
-   "outputs": [],
-   "source": [
-    "stop"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6d2Qscct9Cdb"
-   },
-   "source": [
-    "# (Fail) Calculation of slope and aspect with .gdb DEM data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "FoGT_8f7GBTs"
-   },
-   "outputs": [],
-   "source": [
-    "working_dir = \"/content/drive/My Drive/Work/2025.04 ANU Bushfire\"\n",
-    "dem_data_url = \"https://datasets.seed.nsw.gov.au/dataset/b708a743-ea84-433a-a8e9-10b1d2829e6a/resource/ad8129d2-4ff5-4889-9b39-11240530dcb5/download/climatedem.zip\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "pAsi3-Ux2uzH"
-   },
-   "outputs": [],
-   "source": [
-    "# prompt: connect to google drive\n",
-    "\n",
-    "from google.colab import drive\n",
-    "\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "51fIHj2R7W_R"
-   },
-   "outputs": [],
-   "source": [
-    "# prompt: download a zip file\n",
-    "# NOTE: Took 6 minutes\n",
-    "\n",
-    "from io import BytesIO\n",
-    "from zipfile import ZipFile\n",
-    "\n",
-    "import requests\n",
-    "\n",
-    "\n",
-    "def download_unzip(url, extract_to='.'):\n",
-    "    response = requests.get(url)\n",
-    "    response.raise_for_status()\n",
-    "\n",
-    "    with ZipFile(BytesIO(response.content)) as zfile:\n",
-    "        zfile.extractall(extract_to)\n",
-    "\n",
-    "\n",
-    "# TODO: Skip download if file exists\n",
-    "download_unzip(dem_data_url, working_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "IDkZ05jtHJDt"
-   },
-   "outputs": [],
-   "source": [
-    "# Get gbd_file_path\n",
-    "\n",
-    "import glob\n",
-    "import os\n",
-    "\n",
-    "gdb_file_path = glob.glob(os.path.join(working_dir, \"*/*.gdb\"))[0]\n",
-    "print(f\"gdb_file_path: {gdb_file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "ZHlcRZdlNQ7P"
-   },
-   "outputs": [],
-   "source": [
-    "# Use OpenFileGDB driver to get available layers in the .gdb file\n",
-    "\n",
-    "from osgeo import ogr\n",
-    "\n",
-    "driver = ogr.GetDriverByName(\"OpenFileGDB\")\n",
-    "data_source = driver.Open(gdb_file_path, 0)  # 0 = read-only\n",
-    "\n",
-    "if data_source is None:\n",
-    "    print(\"Failed to open GDB.\")\n",
-    "else:\n",
-    "    print(\"Layers found:\")\n",
-    "    for i in range(data_source.GetLayerCount()):\n",
-    "        layer_name = data_source.GetLayer(i).GetName()\n",
-    "        print(\"-\", layer_name)\n",
-    "        layer = data_source.GetLayerByName(layer_name)\n",
-    "\n",
-    "        print(\"    Feature count:\", layer.GetFeatureCount())\n",
-    "        print(\"    Geometry type:\", layer.GetGeomType())\n",
-    "\n",
-    "        print(\"    First feature fields:\")\n",
-    "        feature = layer.GetNextFeature()\n",
-    "        for i in range(feature.GetFieldCount()):\n",
-    "            print(f\"      {feature.GetFieldDefnRef(i).GetName()}: {feature.GetField(i)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "v48b6TEc8bn2"
-   },
-   "outputs": [],
-   "source": [
-    "# (Not interpretable) View DEM block_data\n",
-    "\n",
-    "import zlib\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "layer_name = \"fras_blk_lf_dem1sec_noExclusions_noNegValues\"\n",
-    "layer = data_source.GetLayerByName(layer_name)\n",
-    "feature = layer.GetNextFeature()\n",
-    "\n",
-    "i = 4\n",
-    "block_data = feature.GetField(i)\n",
-    "print(f\"{feature.GetFieldDefnRef(i).GetName()}: {feature.GetField(i)}\")\n",
-    "\n",
-    "# Decompress the hexadecimal data\n",
-    "raw = bytes.fromhex(block_data)\n",
-    "decompressed = zlib.decompress(raw)\n",
-    "print(f\"decompress (first 100 elements): {decompressed[:100]}\")\n",
-    "\n",
-    "# Applied np conversion\n",
-    "arr = np.frombuffer(decompressed, dtype=np.int16)\n",
-    "print(f\"Numpy converted (first 100 elements): {arr[:100]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Q4wbDv014AIx"
-   },
-   "outputs": [],
-   "source": [
-    "# (Fail) Converting .gdb to .tif\n",
-    "\n",
-    "from osgeo import gdal\n",
-    "\n",
-    "layer_name = \"fras_blk_lf_dem1sec_noExclusions_noNegValues\"\n",
-    "input_path = f\"{gdb_file_path}/{layer_name}\"\n",
-    "output_tif = os.path.join(working_dir, \"dem.tif\")\n",
-    "\n",
-    "# Open and export\n",
-    "gdal.Translate(output_tif, input_path, format=\"GTiff\")\n",
-    "print(\"Export complete:\", output_tif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5Hf-_8m9MSrT"
-   },
-   "source": [
-    "# Notes\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zJ9_xpY0MCgj"
-   },
-   "source": [
-    "## Upload a zipped folder with Colab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "sFFvz0kuGK9h"
-   },
-   "outputs": [],
-   "source": [
-    "from google.colab import files\n",
-    "\n",
-    "uploaded = files.upload()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "WjJoq5EJEUE8"
-   },
-   "outputs": [],
-   "source": [
-    "%cd \"{working_dir}\"\n",
-    "!ls -al"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "bRl-ejb4Jkw0"
-   },
-   "outputs": [],
-   "source": [
-    "import zipfile\n",
-    "\n",
-    "with zipfile.ZipFile(os.path.join(working_dir, \"STE_2021_AUST_SHP_GDA2020.zip\"), 'r') as zip_ref:\n",
-    "    zip_ref.extractall(working_dir)"
    ]
   }
  ],
@@ -787,11 +488,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
