--- a/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
+++ b/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
@@ -70,7 +70,7 @@
     "import numpy as np\n",
     "import rasterio\n",
     "from matplotlib import pyplot as plt\n",
-    "from osgeo import gdal\n",
+    "# from osgeo import gdal  # Cannot install gdal on my Desktop\n",
     "from rasterio.plot import show\n",
     "from shapely.geometry import box\n",
     "\n",
@@ -122,7 +122,8 @@
    "source": [
     "# Read the metadata and the data\n",
     "\n",
-    "with rasterio.open(os.path.join(working_dir, dem_tif_file_path)) as src:\n",
+    "dem_tif_file_path = os.path.join(working_dir, dem_tif_file_path)\n",
+    "with rasterio.open(dem_tif_file_path) as src:\n",
     "    print(\"Full metadata:\")\n",
     "    pprint.pp(src.profile)\n",
     "\n",
@@ -180,7 +181,9 @@
     "        # TODO (LOW): Save cutline in a seperate folder\n",
     "        cutline_gdf = gpd.GeoDataFrame(geometry=intersection, crs=aus.crs)\n",
     "        cutline_gdf = cutline_gdf[~cutline_gdf.geometry.is_empty]\n",
-    "        cutline_path = os.path.join(output_dir, location_name + \"_intersection_cutline.geojson\")\n",
+    "        cutline_path = os.path.join(\n",
+    "            output_dir, 'geojson', location_name + \"_intersection_cutline.geojson\"\n",
+    "        )\n",
     "        cutline_gdf.to_file(cutline_path, driver=\"GeoJSON\")\n",
     "        print(f\"Cutline saved to: {cutline_path}\")\n",
     "        cutline_gdf.plot()\n",
@@ -218,6 +221,7 @@
    "source": [
     "# Get .tif of only interest areas\n",
     "\n",
+    "\n",
     "# Read shapefile of Australia\n",
     "australia_shp_folder_path = os.path.join(working_dir, australia_shp_folder_path)\n",
     "australia_shp_file_path = glob.glob(os.path.join(australia_shp_folder_path, \"*.shp\"))[0]\n",
@@ -226,7 +230,9 @@
     "# Get cropped .tif dem file\n",
     "cutline_gdf, cutline_path = create_cutline_file(bbox, aus)\n",
     "cropped_dem_tif_path = os.path.join(output_dir, 'tif', location_name + \"_dem.tif\")\n",
-    "create_cropped_dem_tif(cropped_dem_tif_path, cutline_path)"
+    "# Use OSGeo4W Shell for gdals command\n",
+    "# TODO: Find the commands I used\n",
+    "# create_cropped_dem_tif(cropped_dem_tif_path, cutline_path)"
    ]
   },
   {
@@ -324,16 +330,16 @@
     "print(f\"Slope saved to: {slope_path}\")\n",
     "\n",
     "# Compute slope\n",
-    "gdal.DEMProcessing(\n",
-    "    slope_path,  # Output file path\n",
-    "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
-    "    \"slope\",  # Processing type\n",
-    "    format=\"GTiff\",  # Output format\n",
-    "    computeEdges=True,  # Avoid edge artifacts\n",
-    "    slopeFormat=\"degree\",  # Options: 'degree' or 'percent'\n",
-    ")\n",
+    "# gdal.DEMProcessing(\n",
+    "#     slope_path,  # Output file path\n",
+    "#     no_neg_cropped_dem_tif_path,  # Input DEM file\n",
+    "#     \"slope\",  # Processing type\n",
+    "#     format=\"GTiff\",  # Output format\n",
+    "#     computeEdges=True,  # Avoid edge artifacts\n",
+    "#     slopeFormat=\"degree\",  # Options: 'degree' or 'percent'\n",
+    "# )\n",
     "\n",
-    "print(\"Slope calculation complete.\")\n",
+    "# print(\"Slope calculation complete.\")\n",
     "\n",
     "# Visualise output slope with matplotlib\n",
     "with rasterio.open(slope_path) as src:\n",
@@ -373,15 +379,15 @@
     "print(f\"Aspect saved to: {aspect_path}\")\n",
     "\n",
     "# Compute aspect\n",
-    "gdal.DEMProcessing(\n",
-    "    aspect_path,  # Output file path\n",
-    "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
-    "    \"aspect\",  # Processing type\n",
-    "    format=\"GTiff\",  # Output format\n",
-    "    computeEdges=True,  # Avoid edge artifacts\n",
-    ")\n",
+    "# gdal.DEMProcessing(\n",
+    "#     aspect_path,  # Output file path\n",
+    "#     no_neg_cropped_dem_tif_path,  # Input DEM file\n",
+    "#     \"aspect\",  # Processing type\n",
+    "#     format=\"GTiff\",  # Output format\n",
+    "#     computeEdges=True,  # Avoid edge artifacts\n",
+    "# )\n",
     "\n",
-    "print(\"Aspect calculation complete.\")\n",
+    "# print(\"Aspect calculation complete.\")\n",
     "\n",
     "# Visualise output aspect with matplotlib\n",
     "with rasterio.open(aspect_path) as src:\n",
