Added Australia time to pcs data

--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -45,6 +45,7 @@
     "from sklearn.cluster import DBSCAN\n",
     "\n",
     "sys.path.append(working_dir)\n",
+    "from Utils.datetime import add_Australia_Datetime\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
@@ -214,7 +215,7 @@
     "    columns={\n",
     "        'Stn_long': 'X',\n",
     "        'Stn_lat': 'Y',\n",
-    "        'Date': 'Datetime',\n",
+    "        'Date': 'UTC_Datetime',\n",
     "        'T': 'Temperature',\n",
     "        'H': 'RH',\n",
     "        'MF': 'DFMC',\n",
@@ -235,7 +236,21 @@
    "source": [
     "# Save the df_all\n",
     "\n",
-    "df_all = df_all[['SiteID', 'X', 'Y', 'Datetime', 'Temperature', 'RH', 'VPD', 'DFMC', 'Soil_mois']]\n",
+    "df_all = add_Australia_Datetime(df)\n",
+    "df_all = df_all[\n",
+    "    [\n",
+    "        'SiteID',\n",
+    "        'X',\n",
+    "        'Y',\n",
+    "        'Datetime',\n",
+    "        'UTC_Datetime',\n",
+    "        'Temperature',\n",
+    "        'RH',\n",
+    "        'VPD',\n",
+    "        'DFMC',\n",
+    "        'Soil_mois',\n",
+    "    ]\n",
+    "]\n",
     "df_all.to_csv(os.path.join(working_dir, output_dir_path, 'pcs.csv'), index=False)\n",
     "df_all"
    ]
