Converted pcs Datetime and UTC_Datetime to timezone-naive format

--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -43,6 +43,9 @@
     "from geopy.distance import great_circle\n",
     "from geopy.point import Point\n",
     "from sklearn.cluster import DBSCAN\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas()\n",
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.datetime import add_Australia_Datetime\n",
@@ -234,9 +237,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the df_all\n",
+    "# Add Australia time\n",
     "\n",
     "df_all = add_Australia_Datetime(df)\n",
+    "df_all['Datetime'] = df_all['Datetime'].progress_apply(\n",
+    "    lambda t: pd.to_datetime(t).tz_localize(None)\n",
+    ")\n",
+    "df_all['UTC_Datetime'] = df_all['UTC_Datetime'].progress_apply(\n",
+    "    lambda t: pd.to_datetime(t).tz_localize(None)\n",
+    ")\n",
+    "df_all.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the df_all\n",
+    "\n",
     "df_all = df_all[\n",
     "    [\n",
     "        'SiteID',\n",
@@ -258,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
