--- a/Notebooks/in-situ_data_preparation/topography_insertion.ipynb
+++ b/Notebooks/in-situ_data_preparation/topography_insertion.ipynb
@@ -263,8 +263,7 @@
     "        return np.nan\n",
     "\n",
     "    # Find the nearest time, within 30 days, with non-NaN veg_cover\n",
-    "    datetime64_t = np.datetime64(pd.to_datetime(t).tz_localize(None))\n",
-    "    time_deltas = np.abs(valid_series['time'] - datetime64_t)\n",
+    "    time_deltas = np.abs(valid_series['time'] - np.datetime64(t))\n",
     "    if time_deltas.min() > np.timedelta64(30, 'D'):\n",
     "        print(\"min time_deltas: \", time_deltas.min() / np.timedelta64(1, 'D'))\n",
     "        return np.nan\n",
